--- a/public/styles/form-auth.css
+++ b/public/styles/form-auth.css
@@ -3,13 +3,12 @@
 /* ----------------------------------------------------------------- */
 .section-form__auth {
     min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .form-auth {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     width: 475px;
 }
