--- a/public/styles/post-details.css
+++ b/public/styles/post-details.css
@@ -19,21 +19,32 @@
     justify-content: space-between;
 }
 
-.post-details .post__actions {
+.post-details .post__actions, .post__actions-likes {
     display: flex;
     align-items: center;
 }
 
-.post-details .post__actions-likes {
+.post-details .post__actions-delete {
+    margin-left: 5px;
+}
+
+.post-details .post__actions-likes div {
     margin-right: 5px;
 }
 
 .post-details .post__content {
-    height: 60vh;
     margin: 20px 0;
 }
 
-.post-details .post__content img {
+.post-details .post__title {
+    margin-bottom: 10px;
+}
+
+.post-details .post__image {
+    height: 60vh;
+}
+
+.post-details .post__image img {
     width: 100%;
     height: 100%;
     object-fit: contain;
