--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,7 +6,10 @@
 @import "form-edit.css";
 @import "posts.css";
 @import "profile.css";
+@import "footer.css";
 @import "post-details.css";
+@import "page-not-found.css";
+@import "home.css";
 
 /* ----------------------------------------------------------------- */
 /* Reset */
@@ -48,6 +51,14 @@ h1 {
 
 h2 {
     font-size: 40px;
+}
+
+/* ----------------------------------------------------------------- */
+/* Position Fixed */
+/* ----------------------------------------------------------------- */
+.position-fixed {
+    position: fixed;
+    width: 100%;
 }
 
 /* ----------------------------------------------------------------- */
@@ -138,10 +149,18 @@ h2 {
 .btn--edit, .btn--save {
     background-color: #144c4c;
     border: none;
-    padding: 15px 20px;
     font-size: 18px;
     border-radius: 5px;
     color: #fff;
+}
+
+.btn--save {
+    width: 120px;
+    height: 46px;
+}
+
+.btn--edit {
+    padding: 12px 24px;
 }
 
 .btn--edit:hover, .btn--save:hover {
@@ -171,6 +190,16 @@ h2 {
 
 .nav ul li + li {
     margin-left: 15px;
+}
+
+@media (max-width: 768px) {
+    .nav ul li + li {
+        margin-left: 0;
+    }
+
+    .nav ul li {
+        margin-top: 20px;
+    }
 }
 
 /* ----------------------------------------------------------------- */
@@ -279,4 +308,66 @@ h2 {
     cursor: default;
     text-decoration: none;
     color: black;
+}
+
+/* ----------------------------------------------------------------- */
+/* Loader */
+/* ----------------------------------------------------------------- */
+.section-loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.loader {
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+.loader--medium {
+    border-top: 3px solid #3d6969;
+    border-right: 3px solid transparent;
+    width: 48px;
+    height: 48px;
+}
+
+.loader--small {
+    border-top: 3px solid #fff;
+    border-right: 3px solid transparent;
+    width: 30px;
+    height: 30px;
+}
+
+.loader--smaller {
+    border-top: 1px solid #fff;
+    border-right: 1px solid transparent;
+    width: 24px;
+    height: 24px;
+}
+
+@keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
+
+/* ----------------------------------------------------------------- */
+/* Error */
+/* ----------------------------------------------------------------- */
+.error {
+    color: red;
+}
+
+/* ----------------------------------------------------------------- */
+/* No Posts */
+/* ----------------------------------------------------------------- */
+.no-posts {
+    text-align: center;
+    font-size: 50px;
 }
